--- a/wechat_naihan/pages/index/index.wxss
+++ b/wechat_naihan/pages/index/index.wxss
@@ -1,77 +1,6 @@
-/**index.wxss**/
-page{
-	display: block;
-	min-height: 100%;
-	background: #dcdcdc;
-}
-.header{
-	border-bottom: 1px solid lightgray;
-	padding-top: 6px;
-	padding-bottom: 6px;
-	width: 100%;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
-	background-color: white;
-}
-.header view{
-	color:#696969;
-	font-size: 16px;
-}
-.content{
-	width: 100%;
-	margin-top: 20rpx;
-	background-color: white;
-}
-.userinfo{
-	display: inline-block;
-	height: 40px;
-	line-height: 40px;
-	width: 100%;
-}
-.userinfo image{
-	width: 40px;
-	height: 40px;
-	border-radius: 50%;
-	float:left;
-}
-.userinfo text{
-	font-size: 15px;
-	height: 50px;
-	float: left;
-	padding-left: 25rpx;
-	color:#696969;
-}
-.content .joke{
+/*index.wxss*/
+.content .jokes{
 	font-size: 16px;
 	margin-top:25rpx;
 	line-height: 19px;
-}
-.action{
-	width: 100%;
-	display: inline-block;
-	height: 40px;
-	line-height: 40px;
-	flex-direction: row;
-	justify-content: flex-start;
-	padding-bottom: 10rpx;
-}
-.action view{
-	width:20%;
-	display: inline-block;
-	height: 40px;
-	line-height: 40px;
-	float: left;
-}
-.action image{
-	width:40px;
-	height: 40px;
-	float: left;
-}
-.action text{
-	width: 20px;
-	font-size: 13px;
-	height: 40px;
-	color:#696969;
-	float: left;
 }
